--- a/package.json
+++ b/package.json
@@ -3,18 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongo": "^0.1.0",
-    "mongodb": "^5.2.0",
-    "mongoose": "^7.0.3",
-    "mongoose-errors": "^1.1.3",
-    "nodemon": "^2.0.22",
-    "validator": "^13.9.0"
+    "mongoose": "^7.0.3"
   },
   "scripts": {
     "lint": "npx eslint .",
@@ -34,6 +24,9 @@
   },
   "homepage": "https://MassloveDen.github.io/express-mesto-gha",
   "devDependencies": {
-    "eslint": "^8.38.0"
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "nodemon": "^2.0.22"
   }
 }
